# package/handler/news.go
@@ -154,7 +154,7 @@ func (h *Handler) updateNews(ctx *gin.Context) {
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/news/get [GET]
+// @Router /news/get [GET]
 func (h *Handler) GetNewsById(ctx *gin.Context) {
 	logrus := h.logrus
 	id := ctx.Query("id")
