# package/handler/tables.go
@@ -150,7 +150,7 @@ func (h *Handler) UpdateTable(ctx *gin.Context) {
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/table/get [GET]
+// @Router /table/get [GET]
 func (h *Handler) GetTableById(ctx *gin.Context) {
 	logrus := h.logrus
 	id := ctx.Query("id")
